--- a/app/templates/main/repos.html
+++ b/app/templates/main/repos.html
@@ -11,29 +11,29 @@
 </head>
 
 <body>
-    <div class="topbar">
-        <button class="openbtn" onclick="openNav()">☰</button>
+    <div class="topbar right">
         <div class="logout2">
-            {% if current_user.is_authenticated %}
             <span>{{current_user.username}} 님,</span>
-            <a class="black" href="{{ url_for('auth.logout') }}">logout</a>
-            {% else %}
-            <a class="black" href="{{ url_for('auth.github_login') }}">login</a>
-            {% endif %}
+            <a class="black" href="{{ url_for('auth.logout') }}">logout</a>    
         </div>
     </div>
-
     <div class="container center-col">
         <img src="{{url_for('static', filename='logo.svg')}}" class="big-logo" alt="" srcset="">
         <div class="border-box">
             <div class="filename-bar" id="filename">My Repositories</div>
             <ul class="repos">
                 {% for repo in repos %}
-                <li class="repo"><a class="black" href="otterlee9043/{{ repo }}/master">/{{ repo
-                        }}</a></li>
+                <li class="repo">
+                    <a class="black" href="otterlee9043/{{ repo['name'] }}/{{ repo['default_branch'] }}">/{{ repo['name'] }}</a>
+                    <div>
+                        <span class="past_time">{{ repo['pushed_at'] | past_time}}</span>
+                        <span class="visibility {{ repo['visibility'] }}">{{ repo['visibility'] }}</span>
+                    </div>
+                </li>
+                <hr>
                 {% endfor %}
             </ul>
-        </div>
+        </div>        
     </div>
 </body>
 
