--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic'); */
 * {
   box-sizing: border-box;
 }
@@ -21,14 +20,13 @@ a:hover {
 }
 
 .logout2 {
-  padding: 10px;
+  padding-top: 15px;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  padding-left: 10px;
   font-size: 12px;
   display: inline;
   color: rgb(110, 110, 110);
-}
-
-.logout2:hover {
-  color: rgb(189, 189, 189);
 }
 
 .topbar {
@@ -52,24 +50,15 @@ ul {
   padding-inline-start: 10px;
   list-style: none;
 }
-div {
-  /* width: 100%; */
-}
+
 body {
-  /* margin: 20px 30px 20px 30px; */
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
 pre {
   margin: 0px;
 }
 
-div#export {
-  /* padding-top: 30px;
-  padding-left: 30px; */
-  /* position: absolute; */
-}
 div.filelist {
   padding-top: 10px;
   margin-bottom: 10px;
@@ -90,7 +79,13 @@ div.box {
 
 .big-logo {
   width: 300px;
+  margin-top: 40px;
   margin-bottom: 50px;
+}
+
+.big-logo-only {
+  width: 400px;
+  margin-bottom: 70px;
 }
 .lineNumber {
   font-weight: bold;
@@ -161,11 +156,9 @@ ul#treeitem {
   margin: 0;
   padding: 0.125em;
   border: 2px transparent solid;
-  /* display: block; */
 }
 
-/* disable default keyboard focus styling for treeitems
-   Keyboard focus is styled with the following CSS */
+
 #treeitem:focus {
   outline: 0;
 }
@@ -219,7 +212,6 @@ ul#treeitem {
   letter-spacing: -3px;
 }
 
-/* contextmenu */
 .context-menu-submenu .context-menu-input:hover {
   background-color: rgb(201, 201, 201);
 }
@@ -332,7 +324,9 @@ a:visited {
 
 .clone-btn:hover {
   background-color: #3ec249;
+  color: white;
 }
+
 .username-bar {
   display: flex;
   border-top-left-radius: 6px;
@@ -352,11 +346,6 @@ code {
 }
 #code {
   padding: 0;
-}
-
-#pull-push {
-  display: flex;
-  /* justify-content: space-around; */
 }
 
 .scroll::-webkit-scrollbar {
@@ -390,6 +379,7 @@ code {
   padding: 10px 30px 10px 30px;
   font-weight: bold;
 }
+
 @media screen and (max-height: 450px) {
   .hiddenbar {
     padding-top: 15px;
@@ -446,14 +436,6 @@ code {
   color: rgb(56, 56, 56);
 }
 
-.projectbar {
-  margin-left: 250px;
-}
-
-/* .decoration:hover {
-  background-color: black;
-  opacity: 60%;
-} */
 
 section.modal {
   display: none;
@@ -464,7 +446,7 @@ section.modal {
 }
 section.modalWindow {
   display: none;
-  position: fixed;
+  position: absolute;
   top: 20%;
   left: 50%;
   z-index: 999 !important;
@@ -495,6 +477,7 @@ section.modalWindow section.modalWrapper {
   right: 10px;
   top: 6px;
   cursor: pointer;
+  color:rgb(56, 56, 56)
 }
 
 .col-15 {
@@ -524,7 +507,6 @@ section.modalWindow section.modalWrapper {
 input[type="text"],
 select,
 textarea {
-  width: 100%;
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -546,6 +528,7 @@ textarea {
   z-index: 1;
   overflow-x: hidden;
   transition: 0.5s;
+  font-size: 13px;
 }
 
 .browse-btn {
@@ -589,8 +572,6 @@ textarea {
 
 .comment {
   position: absolute;
-  /* top: 0;
-  left: 0; */
   border: 1px grey solid;
   border-radius: 3px;
   padding: 5px;
@@ -638,6 +619,7 @@ textarea {
 .center-row {
   display: flex;
   flex-direction: row;
+  margin-bottom: 30px;
 }
 .input-clone {
   flex-grow: 1;
@@ -693,7 +675,9 @@ textarea {
 }
 
 .repo {
-  /* font-family: 'Readex Pro', sans-serif; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 10px;
 }
 
@@ -706,9 +690,6 @@ ul.repos {
   text-align: center;
 }
 
-/* td a{
-  color: blue;
-} */
 
 .youtube {
   width: 400px;
@@ -721,9 +702,6 @@ td {
   vertical-align: top;
 }
 
-section {
-  background-color: #accef7;
-}
 
 .button-wrapper {
   float: right;
@@ -739,4 +717,87 @@ section {
 
 .save.button:hover {
   text-decoration: none;
+}
+
+
+.create-button-bar{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.create-input{
+  width: 90%;
+}
+
+input[type="text"],
+select,
+textarea {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+.create-btn {
+  margin-top: 15px;
+  display: inline-block;
+  text-align: center;
+}
+
+.cd-ext{
+  font-size: 18px;
+  font-stretch: expanded;
+}
+
+.login-btn{
+  font-size: 20px; 
+}
+
+.nonauth-container{
+  position: relative;
+}
+
+.wrapper{
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.visibility{
+  border-radius: 21px;
+  border: 1px solid #7d7d7d;
+  padding-top: 2px;
+  padding-right: 8px;
+  padding-left: 8px;
+  padding-bottom: 2px;
+  color: #7d7d7d;
+  font-size: 12px;
+}
+
+.public{
+  border: 1px solid rgb(0, 134, 218);
+  color: rgb(0, 134, 218);
+}
+
+.past_time{
+  font-size: 14px;
+  color: rgb(104 104 104);
+}
+
+.repos hr{
+  border-top: 0.2px solid #f3f3f3;
+}
+
+.container .border-box{
+  margin-bottom: 70px;
+  max-width: 800px;
+}
+
+.deco-close{
+  margin-right: 3px;
+  margin-left: 3px;
+  color:rgb(166 166 166);
 }
